--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,19 @@
 {
     "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "description": "The Wolphy App",
+    "authors": [
+      {
+        "name": "Dmitriy Lezhnev",
+        "email": "lezhnev.jr@gmail.com"
+      }
+    ],
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "bugsnag/bugsnag-laravel": "1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,7 +26,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "Wolphy\\": "app/"
         }
     },
     "autoload-dev": {
