--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "bugsnag/bugsnag-laravel": "1.*",
+        "lucadegasperi/oauth2-server-laravel": "5.0.*@dev",
         "dingo/api": "0.10.*"
     },
     "require-dev": {
